 - #5909, ST_ValueCount crashes on empty table (Paul Ramsey)
 - #5917, ST_Relate becomes unresponsive (Paul Ramsey)
 - #5991, CircularString distance error (Paul Ramsey)
 - #5962, Consistent clipping of MULTI/POINT (Paul Ramsey)
 - #6028, Crash indexing malformed empty polygon (Paul Ramsey)
 - #5998, [tiger_geocoder] [security] CVE-2022-2625, make sure tables requires
           by extension are owned by extension


PostGIS 3.1.12
2024/12/23

PostgreSQL 9.6-14 required. GEOS 3.6+ required but GEOS 3.9+ to take advantage of all features.
Proj 4.9+ required.

* Bug Fixes *

 - #5795, [topology] Fix ST_NewEdgesSplit can cause invalid topology (Björn Harrtell)
 - #5589, ST_3DDistance error for shared first point (Paul Ramsey)
 - #5686, ST_NumInteriorRings and Triangle crash (Paul Ramsey)
 - #5765, Handle nearly co-linear edges with slightly less slop (Paul Ramsey)
 - #5745, St_AsLatLonText rounding errors (Paul Ramsey)
 - Handle null returns from wkb parser (Paul Ramsey)


PostGIS 3.1.11
2024/02/06

* Bug Fixes *
 - #5610, Regression fix: Allow Nan and infinity again
          in ST_SetPoint (Regina Obe)
 - #5627, #5647, Handling of EMPTY components in PiP check (Paul Ramsey)
 - #5604, Handle distance between collections with empty elements (Paul Ramsey)
 - #5635, Handle NaN points in ST_Split (Regina Obe)
 - Logic error in ST_Covers(geography) (Paul Ramsey)
 - #5646, Crash on collections with empty members (Paul Ramsey)
 - #5580, Handle empty collection components in 3d distance (Paul Ramsey)
 - #5639, ST_DFullyWithin line/poly error case (Paul Ramsey)
 - #5662, Change XML parsers to SAX2 (Paul Ramsey)

PostGIS 3.1.10
2023/11/19

* Bug Fixes *
  - #5568, Improve robustness of topology face split handling (Sandro Santilli)
  - #5494, Fix double-upgrade with view using st_dwithin(text, ...)
           (Sandro Santilli)
  - #5450, Fix macro expansion recursion on powerpc architectures
           (Bas Couwenberg)