@@ -20,7 +20,8 @@ PostGIS 3.1.13 (EOL)
  - #5962, Consistent clipping of MULTI/POINT (Paul Ramsey)
  - #6028, Crash indexing malformed empty polygon (Paul Ramsey)
  - #5998, [tiger_geocoder] [security] CVE-2022-2625, make sure tables requires
-           by extension are owned by extension
+            by extension are owned by extension
+ - #5985, Fix configure issue with Debian 12 and 13 (Regina Obe, Sandro Santilli)
 
 
 PostGIS 3.1.12
